--- a/dev-java/freemarker/ChangeLog
+++ b/dev-java/freemarker/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-java/freemarker
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/freemarker/ChangeLog,v 1.11 2007/04/28 15:01:29 nelchael Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/freemarker/ChangeLog,v 1.12 2007/05/06 10:12:18 nelchael Exp $
+
+*freemarker-2.3.10 (06 May 2007)
+
+  06 May 2007; Krzysiek Pawlik <nelchael@gentoo.org>
+  +files/freemarker-2.3.10-gentoo.patch, +freemarker-2.3.10.ebuild:
+  Version bump.
 
   28 Apr 2007; Krzysiek Pawlik <nelchael@gentoo.org>
   -files/freemarker-2.3.8-gentoo.patch, -freemarker-2.3.8.ebuild,
