--- a/net-fs/coda/ChangeLog
+++ b/net-fs/coda/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-fs/coda
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-fs/coda/ChangeLog,v 1.29 2007/04/29 10:21:59 griffon26 Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-fs/coda/ChangeLog,v 1.30 2007/05/06 10:14:23 genone Exp $
+
+  06 May 2007; Marius Mauch <genone@gentoo.org> coda-6.0.10.ebuild,
+  coda-6.0.11.ebuild, coda-6.0.12.ebuild, coda-6.0.15.ebuild:
+  Replacing einfo with elog
 
   29 Apr 2007; Maurice van der Pot <griffon26@gentoo.org>
   coda-6.0.14.ebuild, coda-6.0.15.ebuild:
