--- a/net-fs/fex/ChangeLog
+++ b/net-fs/fex/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-fs/fex
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-fs/fex/ChangeLog,v 1.2 2007/02/22 02:12:40 peper Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-fs/fex/ChangeLog,v 1.3 2007/05/06 10:15:50 genone Exp $
+
+  06 May 2007; Marius Mauch <genone@gentoo.org> fex-0.8.18.ebuild:
+  Replacing einfo with elog
 
   22 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
   Transition to Manifest2.
