--- a/net-fs/fusesmb/ChangeLog
+++ b/net-fs/fusesmb/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-fs/fusesmb
-# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-fs/fusesmb/ChangeLog,v 1.5 2007/04/07 13:42:20 genstef Exp $
+# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-fs/fusesmb/ChangeLog,v 1.6 2007/05/06 10:17:47 genone Exp $
+
+  06 May 2007; Marius Mauch <genone@gentoo.org> fusesmb-0.8.5.ebuild:
+  Replacing einfo with elog
 
 *fusesmb-0.8.5 (29 Dec 2006)
 
