--- a/net-fs/nfs-utils/ChangeLog
+++ b/net-fs/nfs-utils/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-fs/nfs-utils
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-fs/nfs-utils/ChangeLog,v 1.101 2007/04/07 17:34:52 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-fs/nfs-utils/ChangeLog,v 1.102 2007/05/06 10:21:57 genone Exp $
+
+  06 May 2007; Marius Mauch <genone@gentoo.org> nfs-utils-1.0.6-r6.ebuild:
+  Replacing einfo with elog
 
   07 Apr 2007; Mike Frysinger <vapier@gentoo.org> nfs-utils-1.0.12-r3.ebuild:
   Bind rpc.gssd install to USE=kerberos rather than USE=!nonfsv4
