--- a/net-fs/openafs/ChangeLog
+++ b/net-fs/openafs/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for net-fs/openafs
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-fs/openafs/ChangeLog,v 1.106 2007/04/28 16:52:25 swegener Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-fs/openafs/ChangeLog,v 1.107 2007/05/06 10:30:01 genone Exp $
+
+  06 May 2007; Marius Mauch <genone@gentoo.org> openafs-1.2.10-r1.ebuild,
+  openafs-1.2.13-r2.ebuild, openafs-1.4.0-r2.ebuild, openafs-1.4.2.ebuild,
+  openafs-1.4.3_rc2.ebuild, openafs-1.4.3_rc3.ebuild, openafs-1.4.4.ebuild,
+  openafs-1.5.14.ebuild, openafs-1.5.15.ebuild:
+  Replacing einfo with elog
 
   28 Apr 2007; Sven Wegener <swegener@gentoo.org> openafs-1.2.10-r1.ebuild:
   Fix *initd, *confd and *envd calls (#17388, #174266)
