--- a/net-fs/openafs-kernel/ChangeLog
+++ b/net-fs/openafs-kernel/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-fs/openafs-kernel
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-fs/openafs-kernel/ChangeLog,v 1.65 2007/03/27 00:27:44 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-fs/openafs-kernel/ChangeLog,v 1.66 2007/05/06 10:32:34 genone Exp $
+
+  06 May 2007; Marius Mauch <genone@gentoo.org>
+  openafs-kernel-1.2.13.ebuild:
+  Replacing einfo with eerror
 
   27 Mar 2007; Chris Gianelloni <wolf31o2@gentoo.org>
   openafs-kernel-1.4.4.ebuild:
