--- a/net-fs/sfs/ChangeLog
+++ b/net-fs/sfs/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-fs/sfs
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-fs/sfs/ChangeLog,v 1.14 2007/04/29 17:35:14 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-fs/sfs/ChangeLog,v 1.15 2007/05/06 10:36:37 genone Exp $
+
+  06 May 2007; Marius Mauch <genone@gentoo.org> sfs-0.7.2.ebuild:
+  Replacing einfo with elog
 
   29 Apr 2007; Torsten Veller <tove@gentoo.org> sfs-0.7.2.ebuild:
   Fix *initd, *confd and *envd calls (#173884, #174266)
