--- a/app-portage/eix/ChangeLog
+++ b/app-portage/eix/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for app-portage/eix
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-portage/eix/ChangeLog,v 1.161 2007/04/27 21:17:55 genstef Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-portage/eix/ChangeLog,v 1.162 2007/05/06 10:49:14 genstef Exp $
+
+*eix-0.9.5 (06 May 2007)
+
+  06 May 2007; Stefan Schweizer <genstef@gentoo.org> +eix-0.9.5.ebuild:
+  version bump
 
 *eix-0.9.4 (27 Apr 2007)
 
