--- a/net-ftp/ftpbase/ChangeLog
+++ b/net-ftp/ftpbase/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-ftp/ftpbase
-# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-ftp/ftpbase/ChangeLog,v 1.12 2006/09/27 10:13:58 uberlord Exp $
+# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-ftp/ftpbase/ChangeLog,v 1.13 2007/05/06 10:52:00 genone Exp $
+
+  06 May 2007; Marius Mauch <genone@gentoo.org> ftpbase-0.00.ebuild:
+  Replacing einfo with eerror
 
   27 Sep 2006; Roy Marples <uberlord@gentoo.org> ftpbase-0.00.ebuild:
   Give a newly created home dir sane ownership (root:ftp), #148748 thanks
