--- a/net-ftp/gproftpd/ChangeLog
+++ b/net-ftp/gproftpd/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-ftp/gproftpd
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-ftp/gproftpd/ChangeLog,v 1.16 2007/03/25 17:53:04 dertobi123 Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-ftp/gproftpd/ChangeLog,v 1.17 2007/05/06 10:58:10 genone Exp $
+
+  06 May 2007; Marius Mauch <genone@gentoo.org> gproftpd-8.1.9.ebuild,
+  gproftpd-8.2.8.ebuild, gproftpd-8.3.1.ebuild:
+  Replacing einfo with elog
 
 *gproftpd-8.3.1 (25 Mar 2007)
 
