--- a/net-ftp/netkit-ftpd/ChangeLog
+++ b/net-ftp/netkit-ftpd/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-ftp/netkit-ftpd
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-ftp/netkit-ftpd/ChangeLog,v 1.6 2007/02/11 12:48:58 blubb Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-ftp/netkit-ftpd/ChangeLog,v 1.7 2007/05/06 10:59:35 genone Exp $
+
+  06 May 2007; Marius Mauch <genone@gentoo.org> netkit-ftpd-0.17-r4.ebuild,
+  netkit-ftpd-0.17-r5.ebuild:
+  Replacing einfo with elog
 
   11 Feb 2007; Simon Stelling <blubb@gentoo.org> netkit-ftpd-0.17-r5.ebuild:
   stable on amd64; security bug 155317
