--- a/net-ftp/pftpfxp/ChangeLog
+++ b/net-ftp/pftpfxp/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-ftp/pftpfxp
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-ftp/pftpfxp/ChangeLog,v 1.10 2007/03/15 15:09:34 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-ftp/pftpfxp/ChangeLog,v 1.11 2007/05/06 11:00:51 genone Exp $
+
+  06 May 2007; Marius Mauch <genone@gentoo.org> pftpfxp-0.11.4.6.ebuild,
+  pftpfxp-0.11.4.6-r3.ebuild:
+  Replacing einfo with elog
 
   15 Mar 2007; Raúl Porcel <armin76@gentoo.org> pftpfxp-0.11.4.6-r3.ebuild:
   x86 stable
