--- a/net-ftp/pureadmin/ChangeLog
+++ b/net-ftp/pureadmin/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-ftp/pureadmin
-# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-ftp/pureadmin/ChangeLog,v 1.11 2006/10/23 15:58:20 chtekk Exp $
+# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-ftp/pureadmin/ChangeLog,v 1.12 2007/05/06 11:22:42 genone Exp $
+
+  06 May 2007; Marius Mauch <genone@gentoo.org> pureadmin-0.2.2.ebuild,
+  pureadmin-0.3.ebuild:
+  Replacing einfo with elog
 
   23 Oct 2006; Luca Longinotti <chtekk@gentoo.org> pureadmin-0.2.2.ebuild,
   pureadmin-0.3.ebuild:
