--- a/net-im/aim-transport/ChangeLog
+++ b/net-im/aim-transport/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-im/aim-transport
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/aim-transport/ChangeLog,v 1.29 2007/04/28 17:34:08 swegener Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/aim-transport/ChangeLog,v 1.30 2007/05/06 11:24:42 genone Exp $
+
+  06 May 2007; Marius Mauch <genone@gentoo.org>
+  aim-transport-20040131-r2.ebuild:
+  Replacing einfo with elog
 
   28 Apr 2007; Sven Wegener <swegener@gentoo.org>
   aim-transport-20040131-r2.ebuild:
