--- a/net-im/coccinella/ChangeLog
+++ b/net-im/coccinella/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-im/coccinella
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/coccinella/ChangeLog,v 1.7 2007/04/28 17:34:49 swegener Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/coccinella/ChangeLog,v 1.8 2007/05/06 11:27:05 genone Exp $
+
+  06 May 2007; Marius Mauch <genone@gentoo.org> coccinella-0.95.7.ebuild,
+  coccinella-0.95.10.ebuild:
+  Replacing einfo with elog
 
   28 Apr 2007; Sven Wegener <swegener@gentoo.org> coccinella-0.95.7.ebuild,
   coccinella-0.95.10.ebuild:
