--- a/net-im/jabberd/ChangeLog
+++ b/net-im/jabberd/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-im/jabberd
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/jabberd/ChangeLog,v 1.96 2007/04/10 08:44:43 nelchael Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/jabberd/ChangeLog,v 1.97 2007/05/06 11:31:22 genone Exp $
+
+  06 May 2007; Marius Mauch <genone@gentoo.org> jabberd-1.4.4-r3.ebuild:
+  Replacing einfo with elog
 
   10 Apr 2007; Krzysiek Pawlik <nelchael@gentoo.org>
   jabberd-2.0.11-r1.ebuild:
