--- a/net-im/jit/ChangeLog
+++ b/net-im/jit/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-im/jit
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/jit/ChangeLog,v 1.25 2007/04/28 17:36:09 swegener Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/jit/ChangeLog,v 1.26 2007/05/06 11:35:55 genone Exp $
+
+  06 May 2007; Marius Mauch <genone@gentoo.org> jit-1.1.6-r3.ebuild:
+  Replacing einfo with elog
 
   28 Apr 2007; Sven Wegener <swegener@gentoo.org> jit-1.1.6-r3.ebuild:
   Fix *initd, *confd and *envd calls (#173884, #174266)
