--- a/net-im/jud/ChangeLog
+++ b/net-im/jud/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-im/jud
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/jud/ChangeLog,v 1.8 2007/02/09 04:17:49 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/jud/ChangeLog,v 1.9 2007/05/06 11:37:10 genone Exp $
+
+  06 May 2007; Marius Mauch <genone@gentoo.org> jud-0.5.ebuild:
+  Replacing einfo with elog
 
   09 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
   Regenerate digest in Manifest2 format.
