--- a/net-im/kpopup/ChangeLog
+++ b/net-im/kpopup/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-im/kpopup
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/kpopup/ChangeLog,v 1.8 2007/02/04 00:06:38 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/kpopup/ChangeLog,v 1.9 2007/05/06 11:42:05 genone Exp $
+
+  06 May 2007; Marius Mauch <genone@gentoo.org> kpopup-0.9.7.ebuild:
+  Replacing einfo with elog
 
   04 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
   Regenerate digest in Manifest2 format.
