--- a/net-im/linpopup/ChangeLog
+++ b/net-im/linpopup/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-im/linpopup
-# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/linpopup/ChangeLog,v 1.14 2006/12/01 23:47:43 masterdriverz Exp $
+# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-im/linpopup/ChangeLog,v 1.15 2007/05/06 11:43:30 genone Exp $
+
+  06 May 2007; Marius Mauch <genone@gentoo.org> linpopup-2.0.4-r1.ebuild:
+  Replacing einfo with elog
 
   01 Dec 2006; Charlie Shepherd <masterdriverz@gentoo.org>
   linpopup-2.0.4-r1.ebuild:
