--- a/net-im/mcabber/ChangeLog
+++ b/net-im/mcabber/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for net-im/mcabber
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/mcabber/ChangeLog,v 1.13 2007/02/26 08:35:18 wschlich Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/mcabber/ChangeLog,v 1.14 2007/05/06 11:45:59 genone Exp $
+
+  06 May 2007; Marius Mauch <genone@gentoo.org> mcabber-0.7.4.ebuild,
+  mcabber-0.7.6.ebuild, mcabber-0.7.8.ebuild, mcabber-0.8.2.ebuild,
+  mcabber-0.9.0.ebuild, mcabber-0.9.1.ebuild:
+  Replacing einfo with elog
 
 *mcabber-0.9.1 (26 Feb 2007)
 
