--- a/net-im/msn-transport/ChangeLog
+++ b/net-im/msn-transport/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-im/msn-transport
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/msn-transport/ChangeLog,v 1.22 2007/04/28 17:36:54 swegener Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/msn-transport/ChangeLog,v 1.23 2007/05/06 11:47:42 genone Exp $
+
+  06 May 2007; Marius Mauch <genone@gentoo.org>
+  msn-transport-20040531.ebuild, msn-transport-20040531-r1.ebuild:
+  Replacing einfo with elog
 
   28 Apr 2007; Sven Wegener <swegener@gentoo.org>
   msn-transport-20040531.ebuild, msn-transport-20040531-r1.ebuild:
