--- a/net-im/ntame/ChangeLog
+++ b/net-im/ntame/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-im/ntame
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/ntame/ChangeLog,v 1.4 2007/02/22 02:24:07 peper Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/ntame/ChangeLog,v 1.5 2007/05/06 11:50:25 genone Exp $
+
+  06 May 2007; Marius Mauch <genone@gentoo.org> ntame-998020954.ebuild:
+  Replacing einfo with elog
 
   22 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
   Transition to Manifest2.
