--- a/net-im/pork/ChangeLog
+++ b/net-im/pork/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-im/pork
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/pork/ChangeLog,v 1.36 2007/02/09 04:21:54 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/pork/ChangeLog,v 1.37 2007/05/06 11:52:07 genone Exp $
+
+  06 May 2007; Marius Mauch <genone@gentoo.org> pork-0.99.7.ebuild,
+  pork-0.99.8.1.ebuild:
+  Replacing einfo with elog
 
   09 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
   Regenerate digest in Manifest2 format.
