--- a/net-im/psi/ChangeLog
+++ b/net-im/psi/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-im/psi
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/psi/ChangeLog,v 1.115 2007/05/05 05:05:17 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/psi/ChangeLog,v 1.116 2007/05/06 11:58:57 genone Exp $
+
+  06 May 2007; Marius Mauch <genone@gentoo.org> psi-0.10.ebuild,
+  psi-0.10-r2.ebuild:
+  Replacing einfo with elog
 
   05 May 2007; Jeroen Roovers <jer@gentoo.org> psi-0.11_pre20070314.ebuild:
   Marked ~hppa too.
