--- a/net-im/reaim/ChangeLog
+++ b/net-im/reaim/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-im/reaim
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/reaim/ChangeLog,v 1.5 2007/04/28 17:38:06 swegener Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/reaim/ChangeLog,v 1.6 2007/05/06 11:59:59 genone Exp $
+
+  06 May 2007; Marius Mauch <genone@gentoo.org> reaim-0.8.ebuild:
+  Replacing einfo with elog
 
   28 Apr 2007; Sven Wegener <swegener@gentoo.org> reaim-0.8.ebuild:
   Fix *initd, *confd and *envd calls (#173884, #174266)
