--- a/net-im/simpserver-bin/ChangeLog
+++ b/net-im/simpserver-bin/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-im/simpserver-bin
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/simpserver-bin/ChangeLog,v 1.4 2007/02/22 02:26:23 peper Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/simpserver-bin/ChangeLog,v 1.5 2007/05/06 12:02:06 genone Exp $
+
+  06 May 2007; Marius Mauch <genone@gentoo.org> simpserver-bin-0.9.ebuild,
+  simpserver-bin-2.1.0.ebuild:
+  Replacing einfo with elog
 
   22 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
   Transition to Manifest2.
