--- a/net-im/tmsnc/ChangeLog
+++ b/net-im/tmsnc/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-im/tmsnc
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/tmsnc/ChangeLog,v 1.8 2007/02/22 02:27:40 peper Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/tmsnc/ChangeLog,v 1.9 2007/05/06 12:07:28 genone Exp $
+
+  06 May 2007; Marius Mauch <genone@gentoo.org> tmsnc-0.2.5.ebuild,
+  tmsnc-0.3.0.ebuild, tmsnc-0.3.1.ebuild, tmsnc-0.3.2.ebuild:
+  Replacing einfo with elog
 
   22 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
   Transition to Manifest2.
