--- a/kde-base/nsplugins/ChangeLog
+++ b/kde-base/nsplugins/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/nsplugins
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/nsplugins/ChangeLog,v 1.82 2007/05/02 13:45:46 gustavoz Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/nsplugins/ChangeLog,v 1.83 2007/05/06 12:11:34 carlo Exp $
+
+  06 May 2007; Carsten Lohrke <carlo@gentoo.org> nsplugins-3.5.5-r2.ebuild:
+  Stable on x86.
 
   02 May 2007; Gustavo Zacarias <gustavoz@gentoo.org>
   nsplugins-3.5.5-r2.ebuild:
