--- a/net-im/wildfire/ChangeLog
+++ b/net-im/wildfire/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-im/wildfire
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/wildfire/ChangeLog,v 1.19 2007/04/28 20:30:16 swegener Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/wildfire/ChangeLog,v 1.20 2007/05/06 12:11:45 genone Exp $
+
+  06 May 2007; Marius Mauch <genone@gentoo.org> wildfire-3.1.0.ebuild,
+  wildfire-3.1.1.ebuild, wildfire-3.2.0_rc2.ebuild:
+  Replacing einfo with ewarn, replacing sleep with epause
 
   28 Apr 2007; Sven Wegener <swegener@gentoo.org> wildfire-3.1.0.ebuild,
   wildfire-3.1.1.ebuild, wildfire-3.2.0_rc2.ebuild:
