--- a/kde-base/kdebase/ChangeLog
+++ b/kde-base/kdebase/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/kdebase
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdebase/ChangeLog,v 1.359 2007/05/02 17:32:50 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdebase/ChangeLog,v 1.360 2007/05/06 12:14:49 carlo Exp $
+
+  06 May 2007; Carsten Lohrke <carlo@gentoo.org> kdebase-3.5.5-r4.ebuild:
+  Stable on x86.
 
   02 May 2007; Jeroen Roovers <jer@gentoo.org> kdebase-3.5.6-r3.ebuild:
   Re-keyworded ~hppa (bug #176620).
