--- a/net-im/yahoo-transport/ChangeLog
+++ b/net-im/yahoo-transport/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for net-im/yahoo-transport
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/yahoo-transport/ChangeLog,v 1.24 2007/04/28 17:39:01 swegener Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/yahoo-transport/ChangeLog,v 1.25 2007/05/06 12:18:17 genone Exp $
+
+  06 May 2007; Marius Mauch <genone@gentoo.org>
+  yahoo-transport-2.3.0-r3.ebuild, yahoo-transport-2.3.1-r1.ebuild,
+  yahoo-transport-2.3.2.ebuild:
+  Replacing einfo with elog
 
   28 Apr 2007; Sven Wegener <swegener@gentoo.org>
   yahoo-transport-2.3.1-r1.ebuild, yahoo-transport-2.3.2.ebuild:
