--- a/net-irc/asuka/ChangeLog
+++ b/net-irc/asuka/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-irc/asuka
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-irc/asuka/ChangeLog,v 1.17 2007/04/22 11:38:52 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-irc/asuka/ChangeLog,v 1.18 2007/05/06 12:19:41 genone Exp $
+
+  06 May 2007; Marius Mauch <genone@gentoo.org> asuka-1.0.6.ebuild,
+  asuka-1.2.1.ebuild:
+  Replacing einfo with elog
 
   22 Apr 2007; Raúl Porcel <armin76@gentoo.org> asuka-1.0.6.ebuild:
   Use doconfd and doinitd, bug 174266
