--- a/net-irc/bobotpp/ChangeLog
+++ b/net-irc/bobotpp/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-irc/bobotpp
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-irc/bobotpp/ChangeLog,v 1.18 2007/04/08 13:19:22 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-irc/bobotpp/ChangeLog,v 1.19 2007/05/06 12:22:54 genone Exp $
+
+  06 May 2007; Marius Mauch <genone@gentoo.org> bobotpp-2.2.2.ebuild:
+  Replacing einfo with elog
 
   08 Apr 2007; Raúl Porcel <armin76@gentoo.org>
   -files/2.1.7-ifdef-scripts-fix.patch, -bobotpp-2.1.6.ebuild:
