--- a/net-irc/eggdrop/ChangeLog
+++ b/net-irc/eggdrop/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-irc/eggdrop
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-irc/eggdrop/ChangeLog,v 1.59 2007/04/02 11:19:17 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-irc/eggdrop/ChangeLog,v 1.60 2007/05/06 12:25:38 genone Exp $
+
+  06 May 2007; Marius Mauch <genone@gentoo.org> eggdrop-1.6.17.ebuild,
+  eggdrop-1.6.17-r2.ebuild, eggdrop-1.6.18-r1.ebuild:
+  Replacing einfo with elog
 
   02 Apr 2007; Raúl Porcel <armin76@gentoo.org> eggdrop-1.6.18-r1.ebuild:
   Add ~ia64 keyword wrt bug 170668
