--- a/sci-mathematics/pari/ChangeLog
+++ b/sci-mathematics/pari/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for sci-mathematics/pari
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-mathematics/pari/ChangeLog,v 1.41 2007/02/22 01:33:38 jokey Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-mathematics/pari/ChangeLog,v 1.42 2007/05/06 12:25:45 markusle Exp $
+
+*pari-2.3.2 (06 May 2007)
+
+  06 May 2007; Markus Dittrich <markusle@gentoo.org> +pari-2.3.2.ebuild:
+  Version bump.
 
   22 Feb 2007; Markus Ullmann <jokey@gentoo.org> ChangeLog:
   Redigest for Manifest2
