--- a/net-irc/ircd-hybrid/ChangeLog
+++ b/net-irc/ircd-hybrid/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-irc/ircd-hybrid
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-irc/ircd-hybrid/ChangeLog,v 1.24 2007/02/24 14:15:11 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-irc/ircd-hybrid/ChangeLog,v 1.25 2007/05/06 12:32:08 genone Exp $
+
+  06 May 2007; Marius Mauch <genone@gentoo.org> ircd-hybrid-7.2.2.ebuild:
+  Replacing einfo with elog
 
   24 Feb 2007; Raúl Porcel <armin76@gentoo.org>
   -files/7.1.0-default-config.patch, -files/7.2.1-default-config.patch,
