--- a/net-irc/ircmap/ChangeLog
+++ b/net-irc/ircmap/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-irc/ircmap
-# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-irc/ircmap/ChangeLog,v 1.9 2006/08/09 20:22:12 swegener Exp $
+# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-irc/ircmap/ChangeLog,v 1.10 2007/05/06 12:33:18 genone Exp $
+
+  06 May 2007; Marius Mauch <genone@gentoo.org> ircmap-0.99.ebuild:
+  Replacing einfo with elog
 
   09 Aug 2006; Sven Wegener <swegener@gentoo.org> ircmap-0.99.ebuild:
   Move graphviz only to RDEPEND, bug #142730.
