--- a/net-irc/ircstats/ChangeLog
+++ b/net-irc/ircstats/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-irc/ircstats
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-irc/ircstats/ChangeLog,v 1.2 2007/02/09 04:25:16 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-irc/ircstats/ChangeLog,v 1.3 2007/05/06 12:34:43 genone Exp $
+
+  06 May 2007; Marius Mauch <genone@gentoo.org> ircstats-1.0.ebuild:
+  Replacing einfo with elog
 
   09 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
   Regenerate digest in Manifest2 format.
