--- a/net-irc/muh/ChangeLog
+++ b/net-irc/muh/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-irc/muh
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-irc/muh/ChangeLog,v 1.16 2007/04/24 18:49:56 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-irc/muh/ChangeLog,v 1.17 2007/05/06 12:37:15 genone Exp $
+
+  06 May 2007; Marius Mauch <genone@gentoo.org> muh-2.2a.ebuild:
+  Replacing einfo with elog
 
   24 Apr 2007; Raúl Porcel <armin76@gentoo.org> -muh-2.1_rc1.ebuild:
   old
