--- a/net-irc/onis/ChangeLog
+++ b/net-irc/onis/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-irc/onis
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-irc/onis/ChangeLog,v 1.9 2007/03/13 19:14:02 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-irc/onis/ChangeLog,v 1.10 2007/05/06 12:39:41 genone Exp $
+
+  06 May 2007; Marius Mauch <genone@gentoo.org> onis-0.6.1.ebuild,
+  onis-0.8.2.ebuild:
+  Replacing einfo with elog
 
 *onis-0.8.2 (13 Mar 2007)
 
