--- a/net-irc/ptlink-ircd/ChangeLog
+++ b/net-irc/ptlink-ircd/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-irc/ptlink-ircd
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-irc/ptlink-ircd/ChangeLog,v 1.11 2007/02/20 15:54:27 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-irc/ptlink-ircd/ChangeLog,v 1.12 2007/05/06 12:44:34 genone Exp $
+
+  06 May 2007; Marius Mauch <genone@gentoo.org> ptlink-ircd-6.19.6.ebuild:
+  Replacing einfo with elog
 
   20 Feb 2007; Raúl Porcel <armin76@gentoo.org> -ptlink-ircd-6.19.3.ebuild:
   old
