--- a/net-irc/unrealircd/ChangeLog
+++ b/net-irc/unrealircd/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-irc/unrealircd
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-irc/unrealircd/ChangeLog,v 1.55 2007/04/08 13:16:47 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-irc/unrealircd/ChangeLog,v 1.56 2007/05/06 12:48:16 genone Exp $
+
+  06 May 2007; Marius Mauch <genone@gentoo.org> unrealircd-3.2.6.ebuild:
+  Replacing einfo with elog
 
   08 Apr 2007; Raúl Porcel <armin76@gentoo.org> -unrealircd-3.2.5.ebuild:
   drop old
