--- a/media-gfx/fbida/ChangeLog
+++ b/media-gfx/fbida/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for media-gfx/fbida
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/fbida/ChangeLog,v 1.30 2007/04/22 14:38:30 spock Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/fbida/ChangeLog,v 1.31 2007/05/06 13:20:09 spock Exp $
+
+*fbida-2.06 (06 May 2007)
+
+  06 May 2007; Michał Januszewski <spock@gentoo.org> +fbida-2.06.ebuild:
+  Version bump (bug #177055).
 
   22 Apr 2007; Michał Januszewski <spock@gentoo.org> fbida-2.03-r4.ebuild,
   fbida-2.05.ebuild:
