--- a/app-i18n/man-pages-pl/ChangeLog
+++ b/app-i18n/man-pages-pl/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for app-i18n/man-pages-pl
-# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-i18n/man-pages-pl/ChangeLog,v 1.5 2006/12/04 20:02:39 spock Exp $
+# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-i18n/man-pages-pl/ChangeLog,v 1.6 2007/05/06 14:25:39 spock Exp $
+
+*man-pages-pl-20070126 (06 May 2007)
+
+  06 May 2007; Michał Januszewski <spock@gentoo.org>
+  +man-pages-pl-20070126.ebuild:
+  Version bump (bug #176728).
 
   04 Dec 2006; Michał Januszewski <spock@gentoo.org>
   man-pages-pl-20051024.ebuild:
