--- a/app-misc/mc/ChangeLog
+++ b/app-misc/mc/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-misc/mc
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-misc/mc/ChangeLog,v 1.115 2007/04/23 18:38:33 jokey Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-misc/mc/ChangeLog,v 1.116 2007/05/06 14:28:59 ticho Exp $
+
+  06 May 2007; Andrej Kacian <ticho@gentoo.org> mc-4.6.1-r3.ebuild:
+  Stable on x86, bug #153925.
 
   23 Apr 2007; Markus Ullmann <jokey@gentoo.org> mc-4.6.1-r3.ebuild:
   some quotation and fix bug #167316
