--- a/sci-libs/liborigin/ChangeLog
+++ b/sci-libs/liborigin/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sci-libs/liborigin
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-libs/liborigin/ChangeLog,v 1.3 2007/04/23 16:19:59 bicatali Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-libs/liborigin/ChangeLog,v 1.4 2007/05/06 14:34:13 carlo Exp $
+
+  06 May 2007; Carsten Lohrke <carlo@gentoo.org> liborigin-20070115.ebuild:
+  Update Labplot blocker.
 
 *liborigin-20070115 (23 Apr 2007)
 
