--- a/kde-misc/kdmtheme/ChangeLog
+++ b/kde-misc/kdmtheme/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for kde-misc/kdmtheme
-# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-misc/kdmtheme/ChangeLog,v 1.5 2006/09/02 16:01:58 nelchael Exp $
+# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/kde-misc/kdmtheme/ChangeLog,v 1.6 2007/05/06 14:35:04 carlo Exp $
+
+*kdmtheme-1.1.3 (06 May 2007)
+
+  06 May 2007; Carsten Lohrke <carlo@gentoo.org> +kdmtheme-1.1.3.ebuild:
+  Version bump.
 
   02 Sep 2006; Krzysiek Pawlik <nelchael@gentoo.org> -kdmtheme-1.1.ebuild:
   Removed version 1.1 as it's broken on amd64.
