--- a/sci-visualization/labplot/ChangeLog
+++ b/sci-visualization/labplot/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for sci-visualization/labplot
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-visualization/labplot/ChangeLog,v 1.13 2007/05/06 12:16:50 carlo Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-visualization/labplot/ChangeLog,v 1.14 2007/05/06 14:35:58 carlo Exp $
+
+*labplot-1.5.1.6 (06 May 2007)
+
+  06 May 2007; Carsten Lohrke <carlo@gentoo.org> +labplot-1.5.1.6.ebuild:
+  Version bump.
 
   06 May 2007; Carsten Lohrke <carlo@gentoo.org> -labplot-1.5.1.3.ebuild,
   -labplot-1.5.1.4.ebuild, labplot-1.5.1.5.ebuild:
