--- a/media-libs/tunepimp/ChangeLog
+++ b/media-libs/tunepimp/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-libs/tunepimp
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/tunepimp/ChangeLog,v 1.54 2007/05/01 17:21:08 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/tunepimp/ChangeLog,v 1.55 2007/05/06 15:02:07 dertobi123 Exp $
+
+  06 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  tunepimp-0.5.3.ebuild:
+  ppc stable, bug #176290
 
   01 May 2007; Markus Rothe <corsair@gentoo.org> tunepimp-0.5.3.ebuild:
   Stable on ppc64; bug #176290
