--- a/media-sound/freqtweak/ChangeLog
+++ b/media-sound/freqtweak/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-sound/freqtweak
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/freqtweak/ChangeLog,v 1.21 2007/05/03 15:01:23 gustavoz Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/freqtweak/ChangeLog,v 1.22 2007/05/06 15:03:15 dertobi123 Exp $
+
+  06 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  freqtweak-0.7.0_pre20070214.ebuild:
+  ppc stable, bug #176428
 
   03 May 2007; Gustavo Zacarias <gustavoz@gentoo.org>
   freqtweak-0.7.0_pre20070214.ebuild:
