--- a/app-text/xdvipdfmx/ChangeLog
+++ b/app-text/xdvipdfmx/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-text/xdvipdfmx
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/xdvipdfmx/ChangeLog,v 1.15 2007/05/03 16:31:42 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/xdvipdfmx/ChangeLog,v 1.16 2007/05/06 15:06:29 dertobi123 Exp $
+
+  06 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  xdvipdfmx-0.3.ebuild:
+  ppc stable, bug #176895
 
   03 May 2007; Raúl Porcel <armin76@gentoo.org> xdvipdfmx-0.3.ebuild:
   ia64 + x86 stable wrt bug 176895
