--- a/app-text/xetex/ChangeLog
+++ b/app-text/xetex/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-text/xetex
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/xetex/ChangeLog,v 1.18 2007/05/03 16:34:10 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/xetex/ChangeLog,v 1.19 2007/05/06 15:06:56 dertobi123 Exp $
+
+  06 May 2007; Tobias Scherbaum <dertobi123@gentoo.org> xetex-0.995.ebuild:
+  ppc stable, bug #176895
 
   03 May 2007; Raúl Porcel <armin76@gentoo.org> xetex-0.995.ebuild:
   ia64 + x86 stable wrt bug 176895
