--- a/net-mail/mailman/ChangeLog
+++ b/net-mail/mailman/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-mail/mailman
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-mail/mailman/ChangeLog,v 1.89 2007/05/03 13:29:43 gustavoz Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-mail/mailman/ChangeLog,v 1.90 2007/05/06 15:08:52 dertobi123 Exp $
+
+  06 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  mailman-2.1.9.ebuild:
+  ppc stable, bug #164720
 
   03 May 2007; Gustavo Zacarias <gustavoz@gentoo.org> mailman-2.1.9.ebuild:
   Stable on sparc wrt #164720
