--- a/mail-client/claws-mail-smime/ChangeLog
+++ b/mail-client/claws-mail-smime/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for mail-client/claws-mail-smime
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/mail-client/claws-mail-smime/ChangeLog,v 1.18 2008/05/12 12:55:18 opfer Exp $
+# $Header: /var/cvsroot/gentoo-x86/mail-client/claws-mail-smime/ChangeLog,v 1.19 2008/05/29 02:14:22 halcy0n Exp $
+
+  29 May 2008; Mark Loeser <halcy0n@gentoo.org>
+  claws-mail-smime-0.7.2.ebuild, claws-mail-smime-0.7.3.ebuild,
+  claws-mail-smime-0.7.4.ebuild:
+  Fix RDEPEND on pkgconfig; bug #217278
 
   12 May 2008; Christian Faulhammer <opfer@gentoo.org>
   claws-mail-smime-0.7.5.ebuild:
