--- a/media-sound/teamspeak2-client-bin/ChangeLog
+++ b/media-sound/teamspeak2-client-bin/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-sound/teamspeak2-client-bin
-# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/teamspeak2-client-bin/ChangeLog,v 1.25 2007/08/03 18:34:33 mjolnir Exp $
+# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-sound/teamspeak2-client-bin/ChangeLog,v 1.26 2008/05/29 05:59:02 phreak Exp $
+
+  29 May 2008; Christian Heim <phreak@gentoo.org> metadata.xml:
+  Removing Martin Jackson (mjolnir) from metadata.xml (as per #159513).
 
   03 Aug 2007; Martin Jackson <mjolnir@gentoo.org> metadata.xml:
   Take ownership
